-
Bug
-
Resolution: Fixed
-
P0: Blocker
-
6.11.0 FF
-
-
81ffb8c32 (dev), 683942a21 (dev), adb9455c0 (6.10), 7bb195a3b (6.9), d14231b25 (tqtc/lts-6.5), 57bf784d2 (tqtc/lts-6.8), 5af6d7113 (6.10), c73d47b0c (tqtc/lts-6.5), b2b77e495 (6.9), 19a927082 (tqtc/lts-6.8), 152edefe6 (tqtc/lts-6.5)
-
2025wk34s2QtforAndroid
Finished testing of tst_QQuickPopup::Fusion *********
qt-testrunner.py INFO: Test process exited with code: 0
qt-testrunner.py INFO: Parsed XML file /home/qt/work/testresults/androidtestrunner-1755216950830.xml in 0.002 seconds
qt-testrunner.py INFO: Found 225 passes and 1 failures
qt-testrunner.py WARNING: The test executable returned success but the logfile contains FAIL for function: fadeDimmer
qt-testrunner.py ERROR: Full test run failed repeatedly, aborting!
CMake Error at tst_qquickpopupWrapperRelWithDebInfo.cmake:18 (message):
/home/qt/work/install/libexec/qt-testrunner.py –
/home/qt/work/install/bin/androidtestrunner --path
/home/qt/work/qt/qtdeclarative_standalone_tests/tests/auto/quickcontrols/qquickpopup/android-build-tst_qquickpopup
--adb /opt/android/sdk/platform-tools/adb --skip-install-root --ndk-stack
/opt/android/android-ndk-r27c/ndk-stack --manifest
/home/qt/work/qt/qtdeclarative_standalone_tests/tests/auto/quickcontrols/qquickpopup/android-build-tst_qquickpopup/app/AndroidManifest.xml
--make "/opt/cmake-3.30.5/bin/cmake" --build
/home/qt/work/qt/qtdeclarative_standalone_tests --target
tst_qquickpopup_make_aab --aab
/home/qt/work/qt/qtdeclarative_standalone_tests/tests/auto/quickcontrols/qquickpopup/android-build-tst_qquickpopup/tst_qquickpopup.aab
--bundletool /opt/bundletool/bundletool --timeout 1425 execution failed
with exit code 3.
99% tests passed, 1 tests failed out of 103
Total Test time (real) = 2646.06 sec
The following tests FAILED:
103 - tst_qquickpopup (Failed)
Errors while running CTest
Process finished with error: exit status 8
Details: https://testresults.qt.io/coin/integration/qt/qtdeclarative/tasks/1755225087
Tested changes (refs/builds/qtci/dev/1755212176):
https://codereview.qt-project.org/c/qt/qtdeclarative/+/668376/2 Update dependencies on 'dev' in qt/qtdeclarative
https://codereview.qt-project.org/c/qt/qtdeclarative/+/665708/15 QQ4A: Allow QML functions to be called from Java
- duplicates
-
QTBUG-100991 Some tests crash on Android CI
-
- Closed
-
- relates to
-
QTBUG-139006 QtMainLoopThread crashes on x86_64 android emulator due to graphics backend initialization fail
-
- Reported
-
-
QTQAINFRA-7349 Wrong handling of failed tests re-run on Android
-
- In Progress
-
-
QTBUG-125083 [Android] ANRs related to QtNativeInputConnection
-
- Closed
-
-
QTBUG-132695 Crash in QGuiApplication::applicationStateChanged() when quitting app
-
- Closed
-