Android: ensure valid focus object before native input context actions

Before attempting any input context operations coming from Qt
native Java calls ensure we have a valid focus object. Attempting
to do this locks the AndroidDeadlockProtector, at the time potentially
QAndroidPlatformOpenGLWindow::eglSurface() can be called while the
surface is not yet ready, and it attempts to create one and that also
locks the AndroidDeadlockProtector.

Fixes: QTBUG-139211
Fixes: QTBUG-100991
Fixes: QTBUG-131695
Fixes: QTBUG-125083
Fixes: QTBUG-138837
Task-number: QTBUG-132695
Task-number: QTBUG-139400
Change-Id: I4689a0625d62f3ae3fbcd3674c046c431a3e84ca
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit c8a1e7bb37863ccf1d5859f36841a350060aaddf)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit c600019e19fe8ba0e877bd061b8ad1acbbc6def7)
(cherry picked from commit 9e26d5e8caf6ba9211e24249920c24a08a8bc967)
(cherry picked from commit d554be0a2a621a3308b029ec02b41e0d83284283)